HelloUltraviolet/Fixtures/RejectedSource/Patterns/DuplicatePatternBinding/Expected.uv
//! Expected diagnostic metadata for the DuplicatePatternBinding rejected-source specimen.

expectedDiagnostic("E-SEM-2713", "rule.17.Pat-Dup-R-Err")
